k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: angular-demo
  name: angular-demo
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: angular-demo
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
