k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: angular-demo
  name: angular-demo
spec:
  port:
    targetPort: 80-tcp
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: angular-demo
    weight: 100
  wildcardPolicy: None
